tests/errors/sem.invalid-label.jmp.or
main :: () -> void {
    do:outer {
        break:outter;
    };
};
